Fixed MAJOR BUG with player substitutions not showing completely accurate.

--- a/meteor-nbapulse/imports/css/GameDetails.css
+++ b/meteor-nbapulse/imports/css/GameDetails.css
@@ -575,7 +575,7 @@ h2.team-name.team-name-away {
     color: rgba(255,255,255,1);
     opacity: .5;
     font-size: 10pt;
-    width: 450px
+    width: 460px
 }
 
 .game-details-information .game-details-info-section {
